# tonic-infinite-client-stream

./: Cargo.toml  README.md  build.rs
protocol/: foo.proto
src/: main.rs
